--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,210 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background-color: rgb(46, 46, 46);
+}
+.App{ 
+  max-width: 1680px;
+  width: 100%;
+  min-height: 100vh;
+  margin: 0 auto;
+  box-shadow: 0 2px 6px rgba(255, 230, 3, 0.712);
+  padding: 0 15px;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+/* --------------------------- Navbar ------------------------------- */
+
+header{
+  margin-top: 10px;
+  width: 97%;
+  min-height: 100px;
+  max-width: 1650px;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  position: fixed;
+  box-sizing: border-box;
+  background-color: rgb(240, 240, 240);
+  box-shadow: 0 5px 10px goldenrod;
 }
+header h1{
+font-size: 120px;
+font-family: 'Italianno', cursive;
+background-color: rgb(240, 240, 240);
+
+}
+header ul{
+display: flex;
+padding: 0;
+margin: 0;
+
+} 
+
+header ul li{
+  padding: 0 1rem;
+  background-color: rgb(240, 240, 240);
+}
+header ul li a{
+  font-weight: bold;
+}
+
+a{
+  color: black;
+  text-decoration: none;
+  font-size: 50px;
+  transition: 0.2s;
+  background-color: rgb(240, 240, 240);
+}
+
+a:hover{
+  color: goldenrod;
+}
+
+li{
+  list-style: none;
+}
+
+header .cart{
+  position: relative;
+  cursor: pointer;
+  background-color: rgb(240, 240, 240);
+}
+header .cart box-icon{
+  width: 45px;
+  height: 45px;
+  background-color: rgb(240, 240, 240);
+}
+
+header .cart span{
+  position: absolute;
+  top: -1rem;
+  right: -1.5rem;
+  width: 2rem;
+  height: 2rem;
+
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 0rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  background-color: coral;
+}
+
+
+/* ----------------------------- Cartas de productos---------------- */
+
+.titulo{
+
+  font-style: italic;
+  font-size:  5rem;
+  padding: 14rem 0 0 0 ;
+  color: rgb(231, 231, 231);
+  text-align: center;
+}
+.productos{
+  padding: 5rem 0;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+  gap: 3rem 2rem;
+  box-sizing: border-box;
+}
+.producto{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 1px 10px 10px 2px rgba(177, 175, 175, 0.5);
+  border: 6px solid transparent;
+  border-radius: 5px;
+  padding: 5px 20px 20px 20px;
+  background-color: rgb(202, 201, 201);
+  transition: 0.2s;
+}
+
+.producto:hover{
+  border: 6px solid rgba(218, 165, 32, 0.842);
+  transform: scale(1.20);
+  
+}
+.producto__img{
+  background-color: rgb(202, 201, 201);
+}
+.producto__img img{
+  width: 310px;
+
+}
+.producto__footer{
+  padding: 1rem;
+  background-color: rgb(202, 201, 201);
+}
+
+.producto__footer h1{
+  font-weight: 600;
+  font-size: 1.7rem;
+  color: rgb(0, 0, 0);
+  font-family: Helvetica, sans-serif;
+  background-color: rgb(202, 201, 201);
+}
+.producto__footer p{
+  font-weight: 700;
+  color: rgb(55, 56, 55);
+  text-transform: uppercase;
+  font-size: 18px;  
+  background-color: rgb(202, 201, 201);
+}
+
+.producto__footer .precio{
+  font-size: 2.5rem;
+  color: brown;
+  background-color: rgb(202, 201, 201);
+}
+
+.producto .boton__producto{
+  width: 100%;
+  height: 45px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 1rem 2rem;
+}
+.boton__producto{
+  background-color: rgb(202, 201, 201);
+}
+
+.boton__producto .btn{
+  border: none;
+  outline: 0;
+  cursor: pointer;
+  border-radius: 5px;
+  
+  
+  
+}
+.boton__producto button{
+  background-color: aqua;
+  max-width: 250px;
+  width: 100%;
+  margin: 0 auto;
+  font-size: 1.5rem;
+  color: aliceblue;
+  font-weight: 600;
+} 
+
+.boton__producto a {
+  background-color: rgb(141, 226, 43);
+  display: grid;
+  align-items: center;
+  margin-left: -2rem;
+  border-radius: 5px;
+  text-align: center;
+}
+.boton__producto a:hover{
+  color: rgb(117, 5, 5);
+}
+
