--- a/src/index.css
+++ b/src/index.css
@@ -216,3 +216,16 @@ header .cart span{
   color: rgb(117, 5, 5);
 }
 
+
+
+
+/* --------------------------------------------- Detalle ----------------------------------------------- */
+ .loading{
+  translate: 50px 500px;
+  font-size: 200px;
+ }
+
+
+
+
+
